Avoid the sub-menu of issues jump when hover after scrolled

--- a/frontend/scss/cells/_header.scss
+++ b/frontend/scss/cells/_header.scss
@@ -9,6 +9,11 @@
       height: 100%;
     }
   }
+  .menu__container {
+    @include greaterThan('lg') {
+      top: 93 - 32px;
+    }
+  }
 }
 .sticky-button-enabled.b-version-homepage .header { //// .sticky-button-enabled .header {
   &__column--menu {
@@ -40,6 +45,11 @@
     }
     @media only screen and (max-width: 600px) {
       height: 100%;
+    }
+  }
+  .menu__container {
+    @include greaterThan('lg') {
+      top: 93px;
     }
   }
 }
